implementing required functions in order to use commands/subcommands/memoryaccess

--- a/src/drivers/watts/watts_bms/CMakeLists.txt
+++ b/src/drivers/watts/watts_bms/CMakeLists.txt
@@ -34,6 +34,7 @@ px4_add_module(
 	MODULE drivers__watts_bms
 	MAIN watts_bms
 	COMPILE_FLAGS
+		-DDEBUG_BUILD
 	SRCS
 		watts_bms_main.cpp
 		WattsBms.cpp
