renamed to bq76952

--- a/src/drivers/watts/CMakeLists.txt
+++ b/src/drivers/watts/CMakeLists.txt
@@ -31,4 +31,4 @@
 #
 ############################################################################
 
-add_subdirectory(watts_bms)
+add_subdirectory(bq76952)
