brought in the OLED library as submodule

--- a/src/drivers/watts/ssd1306/CMakeLists.txt
+++ b/src/drivers/watts/ssd1306/CMakeLists.txt
@@ -38,5 +38,7 @@ px4_add_module(
 	SRCS
 		ssd1306_main.cpp
 		SSD1306.cpp
+		esp8266-oled-ssd1306/src/OLEDDisplay.cpp
+		esp8266-oled-ssd1306/src/OLEDDisplayUi.cpp
 	DEPENDS
 	)
