added battery periodic and continuous cannode publishers, added button control for OLED, fixed bug with button hold after boot, added read_memory functions and attempting to debug why mfg_status isn't always correct to allow FET control

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -207,6 +207,7 @@ set(msg_files
 	yaw_estimator_status.msg
 	watts_battery_status.msg
 	shutdown.msg
+	button_pressed.msg
 )
 
 if(NOT px4_constrained_flash_build)
