fixed idle current timeout, changed driver name to "bms", handle bootup logic for high PACK voltage, added shell command for mfg_status

--- a/src/drivers/watts/bms/CMakeLists.txt
+++ b/src/drivers/watts/bms/CMakeLists.txt
@@ -31,8 +31,8 @@
 #
 ############################################################################
 px4_add_module(
-	MODULE drivers__bq76952
-	MAIN bq76952
+	MODULE drivers__bms
+	MAIN bms
 	COMPILE_FLAGS
 		-DDEBUG_BUILD
 	SRCS
