--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "src/modules/microdds_client/Micro-XRCE-DDS-Client"]
 	path = src/modules/microdds_client/Micro-XRCE-DDS-Client
 	url = https://github.com/eProsima/Micro-XRCE-DDS-Client.git
+[submodule "src/drivers/watts/ssd1306_display/esp8266-oled-ssd1306"]
+	path = src/drivers/watts/ssd1306_display/esp8266-oled-ssd1306
+	url = git@github.com:dakejahl/esp8266-oled-ssd1306.git
